--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ body{
     justify-content: space-around;
     padding: 100px;
     height: 100vh;
+    color: white;
+    font-size: 24px;
 }
 .caixa-principal{
     width: 40%;
